--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -5,7 +5,7 @@
         <label for="nav-toggle">
           <span class="las la-bars"></span>
         </label>
-        Dream Boarding House
+        REAS
       </h3>
   
       <div class="search-wrapper">
