--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,20 +1,70 @@
-<link
-  rel="stylesheet"
-  href="styles/footer.css"
-/>
-<link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-<div class="footer">
-      <div class="contact">
-        <div class="p1">HOTLINE : 999xxxxxx</div>
-        <div class="p">EMAIL : xxxx@gmail.com</div>
-        <div class="p">ADDRESS : 254 NVL, Hai Chau ,Da Nang</div>
+<link rel="stylesheet" href="styles/footer.css" />
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+  integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+<section>
+  <div class="footer">
+    <div class="card">
+      <div class="secContent">
+        <div class="contentLeft">
+            <h3 class="logo">
+              REAS
+            </h3>
+          <div class="contentLeft__text">
+            <div class="address">
+              <i class="fa-solid fa-location-dot"></i>
+              <span>254 Nguyễn Văn Linh - Đà Nẵng</span>
+            </div>
+            <div class="phone">
+              <i class="fa-solid fa-phone"></i>
+              <span>056 57 58 488</span>
+            </div>
+            <div class="contact">
+                <li class="contact__icon"><i class="fa-brands fa-instagram"></i></li>
+                <li class="contact__icon"><i class="fa-brands fa-facebook-f"></i></li>
+                <li class="contact__icon"><i class="fa-brands fa-twitter"></i></li>
+                <li class="contact__icon"><i class="fa-regular fa-envelope"></i></li>
+            </div>
+          </div>
+        </div>
+        <div class="contentRight">
+            <div class="contentRight">
+              <div>
+                <h6>Hướng dẫn</h6>
+                <li><a href="">Báo giá & hỗ trợ</a></li>
+                <li><a href="">Câu hỏi thường gặp</a></li>
+                <li><a href="">Thông báo</a></li>
+                <li><a href="">Liên hệ</a></li>
+              </div>
+            </div>
+           
+            <div class="contentRight">
+              <div>
+                <h6>QUY ĐỊNH</h6>
+                <li><a href="">Quy định đăng tin</a></li>
+                <li><a href="">Quy chế hoạt động</a></li>
+                <li><a href="">Điều khoản thỏa thuận</a></li>
+                <li><a href="">Chính sách bảo mật</a></li>
+                <li><a href="">Giải quyết khiếu nại</a></li>
+                <li><a href="">Góp ý báo lỗi</a></li>
+              </div>
+            </div>
+
+              <!-- contentRight_2  -->
+
+              <div class="contentRight_2">
+                  <h6>Đăng ký nhận tin</h6>
+                  <div class="inputDiv">
+                    <input type="text" name="" id="" placeholder="Nhập mail của bạn">
+                    <button class="send_icon"><i class="fa-solid fa-paper-plane"></i></button>
+                  </div>
+              </div>
+        </div>
       </div>
-      <div class="mxh">
-        <div class="p"><i class="bx bxl-facebook-square"></i>FACEBOOK</div>
-        <div class="p"><i class="bx bxl-twitter"></i>TWITTER</div>
-        <div class="p"><i class="bx bxl-telegram"></i>TELEGRAM</div>
-      </div>
-</div>
+    </div>
+  </div>
+  <div class="coppy">
+
+  </div>
+</section>
