--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -156,3 +156,84 @@
     font-size: 1.6rem;
     height: 4rem;
 }
+
+.edit__profile {
+    display:block;
+}
+.edit__profile .profile__btn-update {
+    margin-top: 40px;
+    margin-left: -465px;
+}
+.input__update {
+    width: 60%;
+    height: 29px;
+    margin-top: 9px;
+    padding-left: 10px;
+    font-size: 14px;
+    margin-right: 169px;
+}
+/* modal */
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal--content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    line-height: 0;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal__password {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1051;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0;
+    background-color: rgba(0,0,0,0.4);
+  }
+  .close__password {
+    float: right;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+  }
+  .close__password:hover {
+    cursor: pointer;
+  }
