--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -24,7 +24,7 @@
                                 Connect with more than 75 million renter looking for new homes using for our comprehensive marketing platform
                         </span>
                     </div>
-                    <div class="bannerSearchCard grid">
+                    <div class="bannerSearchCard">
                         <div class="inputAdress">
                             <div class="iconAdress">
                                 <i class="fa-solid fa-location-dot"></i>
