--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -15,7 +15,7 @@
             <ul class="nav-header">
                 <%if(user) { %>
                     <li class="nav-header_item "><a class="" href="/">Trang chủ</a></li>
-                    <li class="nav-header_item"><a href="/favoriteList/rooms">Danh sách yêu thích</a></li>
+                    <li class="nav-header_item"><a href="/favorite">Danh sách yêu thích</a></li>
                     <li class="nav-header_item"><a href="/profile">Thông tin cá nhân</a></li>
                     <% } %>
             </ul>
