--- a/views/components/profile.ejs
+++ b/views/components/profile.ejs
@@ -78,11 +78,11 @@
                                                 </div>
                                                 <div class="col l-6">
                                                     <div class="edit__profile">
-                                                        <form action="/profile" method="POST" enctype="multipart/form-data">
+                                                        <form action="/profile/update?_method=PUT" method="POST" enctype="multipart/form-data">
                                                             <input type="hidden" name="user_id" value="<%=user._id%>">
                                                             <input type="text" name="fullname" value="<%=user.fullname%>" placeholder="Nhập tên" class="input__update">
                                                             <input type="text" name="phonenumber" value="<%=user.phonenumber%>" placeholder="Nhập Số điện thoại" class="input__update">
-                                                        <button type="submit" value="Submit" class="profile__btn-update">Submit</button>
+                                                        <button type="submit" value="Submit" class="profile__btn-update">Thay đổi</button>
                                                         </form>
                                                     </div>
                                                 </div>
@@ -102,10 +102,11 @@
                                                     </div>
                                                     <div class="col l-6">
                                                         <div class="edit__profile">
-                                                            <form action="/profile" method="POST" enctype="multipart/form-data">
-                                                                <input type="text" name="fullname" value="<%=user.fullname%>" placeholder="Nhập tên" class="input__update">
-                                                                <input type="text" name="phonenumber" value="<%=user.phonenumber%>" placeholder="Nhập Số điện thoại" class="input__update">
-                                                            <button type="submit" value="Submit" class="profile__btn-update">Submit</button>
+                                                            <form action="/profile/update?_method=PUT" method="POST" enctype="multipart/form-data">
+                                                                <input type="password" name="oldPassword" value="" placeholder="" class="input__update">
+                                                                <input type="password" name="newPassword" value="" placeholder="" class="input__update">
+                                                                <input type="password" name="reNewPassword" value="" placeholder="" class="input__update">
+                                                            <button type="submit" value="Submit" class="profile__btn-update">Thay đổi</button>
                                                             </form>
                                                         </div>
                                                     </div>
